--- a/StopBy/app/src/main/AndroidManifest.xml
+++ b/StopBy/app/src/main/AndroidManifest.xml
@@ -26,14 +26,14 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".Menu">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Menu" />
+
         <activity android:name=".Post" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
