--- a/StopBy/app/src/main/AndroidManifest.xml
+++ b/StopBy/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".Menu">
+        <activity android:name=".MenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
